--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,17 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  get: ^4.6.1
+  google_fonts: ^2.3.1
+  flutter_svg: ^1.0.3
+  dotted_border: ^2.0.0+2
+  syncfusion_flutter_signaturepad: ^19.4.54
+  pdf: ^3.7.1
+  syncfusion_flutter_pdfviewer: ^19.4.55-beta
+  image_picker: ^0.8.4+11
+  path_provider: ^2.0.9
+  filesystem_picker: ^2.0.0
+  permission_handler: ^9.2.0
 
 dev_dependencies:
   flutter_test:
@@ -60,9 +71,10 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/
+    - assets/icons/
+    - assets/fonts/Nunito-Regular.ttf
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
