--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,8 @@ dependencies:
   path_provider: ^2.0.9
   filesystem_picker: ^2.0.0
   permission_handler: ^9.2.0
+  image_gallery_saver: ^1.7.1
+  dio: ^4.0.6
 
 dev_dependencies:
   flutter_test:
